--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=""
+DATABASE_URL="postgresql://MYDB_owner:PsiwpHzm76hN@ep-hidden-darkness-a5gksvy5-pooler.us-east-2.aws.neon.tech/MYDB?sslmode=require"
+# uncomment next line if you use Prisma <5.10
+# DATABASE_URL_UNPOOLED="postgresql://MYDB_owner:PsiwpHzm76hN@ep-hidden-darkness-a5gksvy5.us-east-2.aws.neon.tech/MYDB?sslmode=require"
